# cinema-website

./: .gitignore  README.md  docker-compose.yml
backend/: APIRouter.py  Config.py  Dockerfile  Main.py  pyproject.toml
backend/DTO/: BookingDTO.py  CreateMovieDTO.py  GenreDTO.py  HallDTO.py  ImageDTO.py  MovieDTO.py  SeatDTO.py  SessionDTO.py  TicketPurchaseRequest.py  UpdateMovieDTO.py  UserDTO.py
backend/alembic/: env.py
backend/auth/: auth_backend.py  auth_router.py  strategy.py  transport.py  user_manager.py
backend/config/: DbConfig.py  JwtConfig.py  LogConfig.py  MinioConfig.py
backend/controller/: BookingController.py  GenreController.py  HallController.py  ImageController.py  MovieController.py  SeatController.py  SessionController.py  UserController.py
backend/db/: Session.py
backend/dependencies/: Security.py
backend/enums/: AgeLimit.py  Role.py
backend/exception/: BaseException.py  BookingNotFoundException.py  EntityNotFoundException.py  GenreNotFoundException.py  HallNotFoundException.py  ImageNotFoundException.py  MovieNotFoundException.py  NotEnoughPermission.py  SeatAlreadyBookedException.py  SeatNotFoundException.py  SessionNotFoundException.py
backend/mapper/: BookingMapper.py  GenreMapper.py  HallMapper.py  ImageMapper.py  MovieMapper.py  SeatMapper.py  SessionMapper.py
backend/model/: Base.py  Booking.py  Genre.py  GenreToMovie.py  Hall.py  Image.py  Movie.py  Seat.py  Session.py  User.py
backend/repository/: BookingRepository.py  GenreRepository.py  HallRepository.py  ImageRepository.py  MovieRepository.py  SeatRepository.py  (+2 more)
(+206 files in other folders)
