[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Alexey Tyrdanov"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = "^0.115.10"
uvicorn = "^0.34.0"
pydantic = "^2.10.6"
sqlalchemy = "^2.0.38"
asyncpg = "^0.30.0"
pydantic-settings = "^2.8.1"
greenlet = "^3.1.1"
alembic = "^1.14.1"
minio = "^7.2.15"
python-multipart = "^0.0.20"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"